<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="180dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="@dimen/layout_big"
        android:layout_marginBottom="@dimen/layout_big"
        android:text="@string/second_activity"
        android:textColor="#000000"
        android:textSize="@dimen/LargeSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/editTextTextPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="4dp"
        android:text="Password" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="Login" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextTextPassword"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hintLogin" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="241dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/hintPass"
        android:inputType="textPassword" />


</RelativeLayout>